[gd_scene load_steps=9 format=3 uid="uid://nd3obcr0xlf1"]

[ext_resource type="Script" path="res://actors/Transition/Transition-Mk1.gd" id="1_x25kx"]
[ext_resource type="Theme" uid="uid://bmso01y44tkgf" path="res://actors/Themes-and-Fonts/Theme-mk0.tres" id="2_loquk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pkj0u"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_76vor"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8ib2p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e786v"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fvsw2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pmnya"]

[node name="Transition-Mk1" type="Node2D"]
script = ExtResource("1_x25kx")

[node name="Head" type="Area2D" parent="."]
position = Vector2(157, 197)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource("CircleShape2D_pkj0u")

[node name="HeadControl" type="Area2D" parent="Head"]
position = Vector2(50, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head/HeadControl"]
shape = SubResource("CircleShape2D_76vor")

[node name="Head-MouseDetect" type="Area2D" parent="."]
position = Vector2(157, 197)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head-MouseDetect"]
shape = SubResource("CircleShape2D_8ib2p")

[node name="Tail" type="Area2D" parent="."]
position = Vector2(302, 194)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tail"]
shape = SubResource("CircleShape2D_e786v")

[node name="TailControl" type="Area2D" parent="Tail"]
position = Vector2(52, -2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tail/TailControl"]
shape = SubResource("CircleShape2D_fvsw2")

[node name="Tail-MouseDetect" type="Area2D" parent="."]
position = Vector2(303, 194)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tail-MouseDetect"]
shape = SubResource("CircleShape2D_pmnya")

[node name="PriorityMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -22.0
offset_top = -13.0
offset_right = 22.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Priority" type="LineEdit" parent="PriorityMarginContainer"]
layout_mode = 2
theme = ExtResource("2_loquk")
text = "0"
alignment = 1
expand_to_text_length = true

[connection signal="area_entered" from="Head" to="." method="_on_head_area_entered"]
[connection signal="area_exited" from="Head" to="." method="_on_head_area_exited"]
[connection signal="mouse_entered" from="Head/HeadControl" to="." method="_on_head_control_mouse_entered"]
[connection signal="mouse_exited" from="Head/HeadControl" to="." method="_on_head_control_mouse_exited"]
[connection signal="mouse_entered" from="Head-MouseDetect" to="." method="_on_head_mouse_detect_mouse_entered"]
[connection signal="mouse_exited" from="Head-MouseDetect" to="." method="_on_head_mouse_detect_mouse_exited"]
[connection signal="area_entered" from="Tail" to="." method="_on_tail_area_entered"]
[connection signal="area_exited" from="Tail" to="." method="_on_tail_area_exited"]
[connection signal="mouse_entered" from="Tail/TailControl" to="." method="_on_tail_control_mouse_entered"]
[connection signal="mouse_exited" from="Tail/TailControl" to="." method="_on_tail_control_mouse_exited"]
[connection signal="mouse_entered" from="Tail-MouseDetect" to="." method="_on_tail_mouse_detect_mouse_entered"]
[connection signal="mouse_exited" from="Tail-MouseDetect" to="." method="_on_tail_mouse_detect_mouse_exited"]
[connection signal="gui_input" from="PriorityMarginContainer/Priority" to="." method="_on_priority_gui_input"]
[connection signal="mouse_entered" from="PriorityMarginContainer/Priority" to="." method="_on_priority_mouse_entered"]
[connection signal="mouse_exited" from="PriorityMarginContainer/Priority" to="." method="_on_priority_mouse_exited"]
